tests/conformance/typecheck/valid/match_with_catchall.ks
// Match with catch-all pattern
val xs = [1, 2, 3]
val result = match (xs) {
  _ => 42
}
